# Meshtastic-arduino

./: .arduino-ci.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  library.properties
.github/workflows/: arduino-library-repository-lint.yml  build_arduino.yml  update_protobufs.yml
examples/GPSClient/: GPSClient.ino  arduino_secrets.h
examples/NodeInfoClient/: NodeInfoClient.ino
examples/SendReceiveClient/: SendReceiveClient.ino  arduino_secrets.h
src/: Meshtastic.h  meshtastic-pb.h  mt_internals.h  mt_nanopb.c  mt_nanopb.h  mt_protocol.cpp  mt_serial.cpp  mt_wifi.cpp
src/meshtastic/: admin.pb.c  admin.pb.h  apponly.pb.h  atak.pb.h  channel.pb.h  clientonly.pb.h  config.pb.c  config.pb.h  device_ui.pb.c  device_ui.pb.h  deviceonly.pb.c  deviceonly.pb.h  localonly.pb.h  mesh.pb.c  mesh.pb.h  module_config.pb.c  module_config.pb.h  portnums.pb.h  powermon.pb.c  powermon.pb.h  telemetry.pb.c  telemetry.pb.h
